infrastructure/kubernetes/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: zhixue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: zhixue/web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
